--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="main_box">
+        <div class="person1"></div>
+        <div class="person2"></div>
+        <div class="person3"></div>
+        <div class="person4"></div>
+        <div class="person5"></div>
+      </div>
+    </main>
+  </body>
 </html>
