--- a/index.html
+++ b/index.html
@@ -3,14 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/rest.css" />
     <title>Document</title>
   </head>
   <body>
     <main>
       <div class="main_box">
-        <div class="person1"></div>
-        <div class="person2"></div>
+        <div class="person1">
+          <div class="user_box">
+            <div class="img_box">
+              <img src="./img/Daniel Clifford.svg" alt="Daniel" />
+            </div>
+            <div class="user_name">
+              <h2>Daniel Clifford</h2>
+              <span>Verified Graduate</span>
+            </div>
+          </div>
+          <div class="info_content">
+            <h1 class="info_content_h1 width_height_h1">
+              I received a job offer mid-course, and the subjects I learned were
+              current, if not more so, in the company I joined. I honestly feel
+              I got every penny’s worth.
+            </h1>
+            <p class="info_content_p width_height_p">
+              “ I was an EMT for many years before I joined the bootcamp. I’ve
+              been looking to make a transition and have heard some people who
+              had an amazing experience here. I signed up for the free intro
+              course and found it incredibly fun! I enrolled shortly thereafter.
+              The next 12 weeks was the best - and most grueling - time of my
+              life. Since completing the course, I’ve successfully switched
+              careers, working as a Software Engineer at a VR startup. ”
+            </p>
+          </div>
+        </div>
+        <div class="person2">
+          <div class="user_box2">
+            <div class="img_box">
+              <img src="./img/Jonathan Walters.svg" alt="Jonathan" />
+            </div>
+            <div class="user_name user_name2">
+              <h2>Jonathan Walters</h2>
+              <span>Verified Graduate</span>
+            </div>
+          </div>
+          <div class="info_content">
+            <h1 class="info_content_h1 width_height_h1_jonathan">
+              The team was very supportive and kept me motivated
+            </h1>
+            <p class="info_content_p width_height_p_jonathan">
+              “ I started as a total newbie with virtually no coding skills. I
+              now work as a mobile engineer for a big company. This was one of
+              the best investments I’ve made in myself. “
+            </p>
+          </div>
+        </div>
         <div class="person3"></div>
         <div class="person4"></div>
         <div class="person5"></div>
