--- a/index.html
+++ b/index.html
@@ -64,7 +64,27 @@
             </p>
           </div>
         </div>
-        <div class="person3"></div>
+        <div class="person3">
+          <div class="user_box2">
+            <div class="img_box">
+              <img src="./img/Jeanette Harmon.svg" alt="Jonathan" />
+            </div>
+            <div class="user_name user_name2">
+              <h2>Jeanette Harmon</h2>
+              <span>Verified Graduate</span>
+            </div>
+          </div>
+          <div class="info_content">
+            <h1 class="info_content_h1 width_height_h1_jonathan">
+              An overall wonderful and rewarding experience
+            </h1>
+            <p class="info_content_p width_height_p_jonathan">
+              “ Thank you for the wonderful experience! I now have a job I
+              really enjoy, and make a good living while doing something I love.
+              ”
+            </p>
+          </div>
+        </div>
         <div class="person4"></div>
         <div class="person5"></div>
       </div>
